--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,11 @@
-<div class="p-2 text-gray-950">
-  <h2>Welcome to the home page</h2>
+<div class="flex flex-col items-center justify-between font-calligraphy animate-slide-in-down min-h-screen bg-gray-600 w-full">
+  <div class="flex flex-col flex-grow items-center justify-center">
+    <h2 class="text-2xl text-yellow-500 font-bold text-center animate-bounce tracking-widest drop-shadow-lg">Welcome to your Budget management App</h2>
+  </div>
+  <div class="flex justify-center w-full mb-10">
+    <div class="flex gap-10 lg:gap-30">
+      <%=button_to "Login", root_path, class:"bg-blue-400 p-2 text-gray-200 min-w-[30vw] sm:min-w-[20vw] md:min-w-[15vw] lg:min-w-[10vw] rounded-md cursor-pointer hover:bg-orange-400"%>
+      <%=button_to "Signup", root_path, class:"bg-gray-500 p-2 text-gray-200 min-w-[30vw] sm:min-w-[20vw] md:min-w-[15vw] lg:min-w-[10vw] rounded-md cursor-pointer hover:bg-orange-400"%>
+    </div>
+  </div>
 </div>
