--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,8 +4,8 @@
   </div>
   <div class="flex justify-center w-full mb-10">
     <div class="flex gap-10 lg:gap-30">
-      <%=button_to "Login", new_user_session_path, class:"bg-blue-400 p-2 text-gray-200 min-w-[30vw] sm:min-w-[20vw] md:min-w-[15vw] lg:min-w-[10vw] rounded-md cursor-pointer hover:bg-orange-400"%>
-      <%=button_to "Signup", new_user_registration_path, class:"bg-gray-500 p-2 text-gray-200 min-w-[30vw] sm:min-w-[20vw] md:min-w-[15vw] lg:min-w-[10vw] rounded-md cursor-pointer hover:bg-orange-400"%>
+      <%=link_to "Login", new_user_session_path, class:"bg-blue-400 p-2 text-gray-200 min-w-[30vw] sm:min-w-[20vw] md:min-w-[15vw] lg:min-w-[10vw] rounded-md cursor-pointer hover:bg-orange-400"%>
+      <%=link_to "Signup", new_user_registration_path, class:"bg-gray-500 p-2 text-gray-200 min-w-[30vw] sm:min-w-[20vw] md:min-w-[15vw] lg:min-w-[10vw] rounded-md cursor-pointer hover:bg-orange-400"%>
     </div>
   </div>
 </div>
