--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <%=render 'flash'%>
+    <%= render 'shared/flash'%>
     <main class="">
       <%= yield %>
     </main>
