--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,2 +1,3 @@
-<div>Dashboard</div>
-<%= button_to "Logout", destroy_user_session_path, method: :delete %>
+<section class="container mx-auto">
+  <%=render "shared/navbar"%>
+</section>
