--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav data-controller="menu" class="relative max-w-6xl mx-auto flex items-center justify-between my-5 px-5 py-10 bg-blue-500 h-10">
+<nav data-controller="menu" class="relative max-w-6xl mx-auto flex items-center justify-between px-5 py-10 bg-blue-500 h-10">
     <div>
       <%= inline_svg_tag("budget.svg", class:"h-10 w-10 text-white") %>
     </div>
