--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -1,5 +1,5 @@
 <div
-
+data-controller="modal"
 class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
 >
   <div class="bg-white rounded-lg shadow-lg w-full max-w-lg p-6">
