--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -1,8 +1,7 @@
 <div
-data-controller="modal"
-class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
+  class="fixed inset-0 bg-gray-900/70 backdrop-blur-sm flex items-center justify-center z-10"
 >
-  <div class="bg-white rounded-lg shadow-lg w-full max-w-lg p-6">
-    <%= yield%>
-  </div>
+    <div class="bg-white rounded-lg shadow-lg w-full max-w-lg p-6">
+      <%= yield%>
+    </div>
 </div>
