--- a/app/views/groups/_groups.html.erb
+++ b/app/views/groups/_groups.html.erb
@@ -7,6 +7,6 @@
           </ul>
         <% else %>
           <p class="text-gray-500 font-bold text-xl tracking-tighter opacity-90 py-5">No categories added yet! Add one below...</p>
-          <ul id="groups" class="space-y-2"></ul>
+          <ul class="space-y-2"></ul>
   <% end %>
 </div>
