modify groups content and styling

--- a/app/views/groups/_groups.html.erb
+++ b/app/views/groups/_groups.html.erb
@@ -1,12 +1,32 @@
 <div id="groups">
   <% if groups.any? %>
-          <ul class="space-y-2">
-            <% groups.each do |group| %>
-              <%= render "groups/group", group: group %>
-            <% end %>
-          </ul>
+    <div class="bg-white shadow px-5 md:px-10 py-10">
+      <div class="grid grid-cols-[40px_1fr_1fr_1fr] lg:grid-cols-[80px_1fr_1fr_1fr] font-bold text-gray-700 bg-gray-200 px-4 py-2 text-sm lg:text-lg">
+        <span>Sno</span>
+        <span>Icon</span>
+        <span>Group Name</span>
+        <span class="text-right">Total</span>
+      </div>
+      <ul class="divide-y divide-gray-300">
+        <% groups.each_with_index do |group, index| %>
+          <%= render "groups/group", group: group, index: index %>
+        <% end %>
+      </ul>
+      <div class="mt-10">
+    <%=link_to "Add a new category",
+    new_group_path,
+    data: { turbo_frame: "modal", turbo_prefetch: false },
+    class:"bg-blue-400 hover:bg-blue-300 py-2 px-5 w-1/2 lg:w-1/5 text-center text-gray-100 font-bold rounded-lg" %>
+  </div>
         <% else %>
-          <p class="text-gray-500 font-bold text-xl tracking-tighter opacity-90 py-5">No categories added yet! Add one below...</p>
+          <p class="text-gray-500 text-xl tracking-tighter opacity-90 py-5">No category added yet...!</p>
           <ul class="space-y-2"></ul>
+          <div class="mt-10">
+    <%=link_to "Add a new category",
+    new_group_path,
+    data: { turbo_frame: "modal" },
+    class:"bg-blue-400 hover:bg-blue-300 py-2 px-5 w-1/2 lg:w-1/5 text-center text-gray-100 font-bold rounded-lg" %>
+  </div>
+    </div>
   <% end %>
 </div>
