--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,8 +1,27 @@
-<section class="bg-gray-200 min-h-screen mt-0 px-8 lg:px-5">
+<section class="bg-gray-200 min-h-screen mt-0 px-8 lg:px-5 py-10">
   <%=render "shared/navbar"%>
-  <p class="max-w-6xl mx-auto flex flex-col">Group Show</p>
-  <div class="max-w-6xl mx-auto flex w-1/2 justify-between items-center">
-    <%=button_to "Back", dashboard_path, method: :get, class:"p-2 cursor-pointer rounded-md text-white bg-blue-500"%>
-    <%=button_to "Delete", group_path(@group), method: :delete, class:"p-2 cursor-pointer rounded-md text-white bg-red-500"%>
+  <div class="max-w-6xl mx-auto flex flex-col mt-10">
+    <h1 class="flex justify-between bg-white shadow-lg rounded border-b border-gray-400 md:text-2xl font-bold px-7 py-4">
+      <%= @group.name %>
+      <%= @group.icon %>
+      <span class="text-gray-900">
+        <turbo-frame id="group-total">
+          <%= render "groups/total", group: @group %>
+        <turbo-frame>
+      </span>
+    </h2>
+    <turbo-frame id="operations">
+      <%= render "operations/operations", operations: @operations %>
+    </turbo-frame>
+    <%=link_to "Add a new transaction",
+      new_group_operation_path(@group), 
+      data: { turbo_frame: "modal", turbo_prefetch: false },
+      class:"bg-blue-400 hover:bg-blue-300 text-sm md:text-base py-2 px-5 w-[80%] mx-auto md:mx-0 md:w-1/3 lg:w-1/5 text-center text-gray-100 md:font-bold rounded-lg my-10"
+    %>
+    <turbo-frame id="modal2"></turbo-frame>
+  </div>
+  <div class="max-w-6xl mx-auto flex lg:w-1/2 justify-between items-center">
+    <%=button_to "Back", dashboard_path, method: :get, class:"p-2 cursor-pointer rounded-md text-white bg-blue-400 hover:bg-blue-500 w-[30vw] md:w-[20vw] lg:w-[12vw]"%>
+    <%=button_to "Delete category", group_path(@group), method: :delete, class:"p-2 cursor-pointer rounded-md text-white hover:font-bold bg-red-400 hover:bg-red-500"%>
   </div>
 </section>
