--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
     <div>
       <%= inline_svg_tag("budget.svg", class:"h-10 w-10 text-white") %>
     </div>
-    <div class="text-white font-bold text-2xl md:text-4xl">
+    <div class="text-white md:text-4xl">
       <%= @page_title %>
     </div>
     <button data-action="click->menu#toggle" class="md:hidden">
