--- a/app/views/groups/_groups.html.erb
+++ b/app/views/groups/_groups.html.erb
@@ -1,4 +1,4 @@
-<div id="groups">
+<div>
   <% if groups.any? %>
     <div class="bg-white shadow px-5 md:px-10 py-10">
       <div class="grid grid-cols-[40px_1fr_1fr_1fr] lg:grid-cols-[80px_1fr_1fr_1fr] font-bold text-gray-700 bg-gray-200 px-4 py-2 text-sm lg:text-lg">
